# notification_creator

./: .env-sample  .gitignore  CLAUDE.md  docker-compose.yml  manual_run.sh  release.txt
backend/: Dockerfile  package-lock.json  pyproject.toml
backend/app/: auth.py  config.py  crud.py  database.py  events.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  notifications.py  sse.py
frontend/: nginx.conf  package-lock.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: Header.tsx  NotificationCard.tsx  NotificationList.tsx  TagFilter.tsx
frontend/src/hooks/: useAuth.tsx  useNotifications.ts  useSSE.ts
frontend/src/pages/: AdminPage.tsx  LoginPage.tsx  NotificationsPage.tsx  RegisterPage.tsx
